unified_tests/pattern_matching/match_arm_missing_expression_before_next_arm/expect/build.text.stderr
lib.copp:5:9: error: expected expression
          string => "s"
          ^
